# agentic-core

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
how_to_start/: __init__.py  agents.py  config.py  workflow.py
how_to_start/prompts/: sentiment.yaml
src/agentic_core/: __init__.py  testing.py
src/agentic_core/agents/: __init__.py  base.py  tool_loop.py
src/agentic_core/core/: __init__.py  config.py  errors.py  gateway.py  observability.py  schemas.py
src/agentic_core/eval/: __init__.py  harness.py
src/agentic_core/guardrails/: __init__.py  io_guards.py
src/agentic_core/orchestration/: __init__.py  runner.py
tests/: conftest.py  test_agents.py  test_config.py  test_errors.py  test_eval.py  test_gateway.py  test_guardrails.py  test_observability.py  test_runner.py  test_schemas.py  test_tool_loop.py
